$Id: History,v 1.43 2001-10-22 11:18:11 yhajime Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------
22 October 2001 Hajime Yoshida
-G4UIGAG.cc no more compiler warning due to G4String

22 October 2001 Hajime Yoshida
- G4UIGAG ; no compilation warning with g++-2.95

11 August 2001  John Allison (interfaces-V03-02-00)
- Re-engineered G4UI variables.  Coworks with config-V03-02-04.
- Changed GNUmakefile so that GAG, TERMINAL and TCSH built by default.
- Nothing built if G4UI_NONE is set.

29 November 2000 Makoto Asai (interfaces-V02-00-03)
- Tag for Guy's correction.

28 November 2000 Guy Barrand
- G4Xt.cc ; SUN-CC : correct warning : argc hides G4VInteractorManager::argc.

27 November 2000 Makoto Asai (interfaces-V02-00-02)
- G4VUIShell.hh : add virtual keyword to the destructor.

11 August 2000 Guy Barrand
- G4UIWo.cc : add some cast in order to compile with OSF1/cxx strict_ansi mode.

1 August 2000 Gabriele Cosmo (interfaces-V02-00-01)
- Fixed warnings on HP-aCC system in G4UItcsh.cc, due to unproper usage of G4int
  where unsigned (size_t) was requested instead.

31 July 2000 Gonzalo Gracia
- Modifications required to compile on NT
  Operator string::[] requires size_t argument. 