@@ -1,4 +1,4 @@
-$Id: History,v 1.43 2001-10-22 11:18:11 yhajime Exp $
+$Id: History,v 1.44 2001-11-24 18:55:51 asaim Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,12 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+
+23 November 2001 Makoto Asai (interfaces-V03-02-01)
+- Fix G4UIterminal to display a command line AFTER solving aliases
+  in case the command caused "command not found".
+- Fix G4UItcsh.hh not to have warning message.
+
 22 October 2001 Hajime Yoshida
 -G4UIGAG.cc no more compiler warning due to G4String
 
